crates/state/tests/snapshots/state_foundation__after_first_open.snap
---
source: crates/state/tests/state_foundation.rs
expression: "state::fs::migration_backups(&paths)?"
---
[]
