crates/state/tests/snapshots/state_foundation__database_files_are_restricted_to_the_current_user.snap
---
source: crates/state/tests/state_foundation.rs
expression: "state::fs::inspect_database_files(&paths)?"
---
[
    DatabaseFileInspection {
        name: "database",
        path: "pv.db",
        mode: "600",
        owned_by_current_user: true,
    },
    DatabaseFileInspection {
        name: "wal",
        path: "pv.db-wal",
        mode: "600",
        owned_by_current_user: true,
    },
    DatabaseFileInspection {
        name: "shared_memory",
        path: "pv.db-shm",
        mode: "600",
        owned_by_current_user: true,
    },
]
