crates/state/tests/snapshots/state_foundation__database_runs_migrations_and_exposes_core_schema.snap
---
source: crates/state/tests/state_foundation.rs
expression: database.inspect()?
---
DatabaseInspection {
    busy_timeout_ms: 250,
    foreign_keys_enabled: true,
    journal_mode: "wal",
    migrations: [
        "001:core_state_schema",
        "002:managed_resource_removal_intent",
        "003:project_primary_hostname_updates",
        "004:project_original_path",
        "005:project_resource_requirements",
        "006:global_php_default",
        "007:resource_port_roles",
        "008:project_php_runtime_extensions",
        "009:project_mode_and_slug",
        "010:job_diagnostic_outcomes",
        "011:remove_admin_ports",
        "012:postgres_track_preload_libraries",
        "013:remove_additional_hostnames",
    ],
    tables: [
        "global_php_default_track",
        "job_diagnostic_outcomes",
        "jobs",
        "managed_resource_tracks",
        "observed_states",
        "ports",
        "postgres_track_preload_libraries",
        "project_env_observed_warnings",
        "project_hostnames",
        "project_managed_resources",
        "projects",
        "pv_migrations",
        "resource_allocations",
        "resource_ports",
    ],
}
