crates/state/tests/snapshots/state_foundation__dns_port_allocator_persists_and_reuses_preferred_assignment.snap
---
source: crates/state/tests/state_foundation.rs
expression: "(assigned_dns, reused_dns, fallback_dns, database.assigned_ports()?,)"
---
(
    PortAssignment {
        owner: Dns,
        port: 35353,
        updated_at: "<timestamp>",
    },
    PortAssignment {
        owner: Dns,
        port: 35353,
        updated_at: "<timestamp>",
    },
    PortAssignment {
        owner: Dns,
        port: 45000,
        updated_at: "<timestamp>",
    },
    [
        PortAssignment {
            owner: Dns,
            port: 45000,
            updated_at: "<timestamp>",
        },
    ],
)
