crates/state/tests/snapshots/state_foundation__gateway_port_allocator_persists_distinct_http_and_https_assignments.snap
---
source: crates/state/tests/state_foundation.rs
expression: "(assigned, reused, database.assigned_ports()?)"
---
(
    GatewayPortAssignments {
        http: PortAssignment {
            owner: Gateway(
                Http,
            ),
            port: 48080,
            updated_at: "<timestamp>",
        },
        https: PortAssignment {
            owner: Gateway(
                Https,
            ),
            port: 48443,
            updated_at: "<timestamp>",
        },
        admin: PortAssignment {
            owner: Gateway(
                Admin,
            ),
            port: 2019,
            updated_at: "<timestamp>",
        },
    },
    GatewayPortAssignments {
        http: PortAssignment {
            owner: Gateway(
                Http,
            ),
            port: 48080,
            updated_at: "<timestamp>",
        },
        https: PortAssignment {
            owner: Gateway(
                Https,
            ),
            port: 48443,
            updated_at: "<timestamp>",
        },
        admin: PortAssignment {
            owner: Gateway(
                Admin,
            ),
            port: 2019,
            updated_at: "<timestamp>",
        },
    },
    [
        PortAssignment {
            owner: Gateway(
                Admin,
            ),
            port: 2019,
            updated_at: "<timestamp>",
        },
        PortAssignment {
            owner: Gateway(
                Http,
            ),
            port: 48080,
            updated_at: "<timestamp>",
        },
        PortAssignment {
            owner: Gateway(
                Https,
            ),
            port: 48443,
            updated_at: "<timestamp>",
        },
    ],
)
