crates/state/tests/snapshots/state_foundation__linked_projects_preserve_ids_and_refresh_hostnames.snap
---
source: crates/state/tests/state_foundation.rs
expression: "(created.status, updated.status, database.projects()?)"
---
(
    Created,
    Updated,
    [
        ProjectRecord {
            id: "<project_id>",
            slug: "acme",
            mode: Served,
            path: "<tempdir>/acme",
            original_path: "<tempdir>/acme",
            primary_hostname: Some(
                "store.test",
            ),
            config_path: "<tempdir>/acme/pv.yml",
            desired_php_track: Some(
                "8.3",
            ),
            php_runtime: ProjectPhpRuntimeRecord {
                track: Some(
                    "8.3",
                ),
                requested_extensions: [],
                loaded_extensions: [],
                ignored_extensions: [],
            },
            created_at: "<timestamp>",
            updated_at: "<timestamp>",
        },
    ],
)
