crates/state/tests/snapshots/state_foundation__managed_resource_removal_intent_migration_backfills_existing_tracks.snap
---
source: crates/state/tests/state_foundation.rs
expression: database.managed_resource_tracks()?
---
[
    ManagedResourceTrackRecord {
        resource_name: "redis",
        track: "7.2",
        desired_state: Installed,
        installed_version: Some(
            "7.2.5-pv1",
        ),
        current_artifact_path: Some(
            "/Users/example/.pv/resources/redis/7.2/releases/7.2.5-pv1",
        ),
        usage_count: 3,
        removal_prune: false,
        removal_force: false,
        updated_at: "2026-05-23T00:00:00Z",
    },
]
